made a global public counter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "codegen",
         "curvepoint",
+        "Grumpkin",
         "lmao",
         "nargo",
         "pedersen",
-        "preimg"
+        "preimg",
+        "schnorr"
     ]
 }
